--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+#Github Api repositories URL
 url=https://api.github.com/search/repositories
+
+#Date Config
 date.format=yyyy-MM-dd
+
+#Handler Config
+spring.resources.add-mappings=false
+spring.mvc.throw-exception-if-no-handler-found=true
 
